--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 body{
     background-color: cornflowerblue;
 }
-.title{
+section{
+    margin-top: 100px;
+}
+.title{    
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
 }
+#current_date{
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+hr{
+    width: 80%;
+}
 
 .box{
-    margin-top: 180px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.boxDolar{
+.boxTitle{
+    margin-top: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 21px;
+    font-weight: bold;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,7 +36,8 @@ body{
     width: 400px;
     height: 30px;   
 }
-#dolar, #euro{
+#dolar, #euro, #bitcoin{
+    font-size: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
